--- a/wp-content/themes/understrap-child/sass/theme/modules/featured_products.scss
+++ b/wp-content/themes/understrap-child/sass/theme/modules/featured_products.scss
@@ -1,4 +1,8 @@
 .featured-products {
+	@at-root #{&}__carousel {
+		max-width: 100vw;
+		overflow: hidden;
+	}
 	.slide-item {
 		display: block;
 	}
